# cis6930sp25-assignment1

./: .main.py.swo  .main.py.swp  COLLABORATORS.md  Pipfile  README.md  crime_data.json  main.py  pyproject.toml  test_crimes.py
tests/: test_crimes.py
