[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Alec McGregor", email = "alecmcgregor@ufl.edu"}]
name = "assignment1"
description = "Assignment One from alecmcgregor -- Spring 2025"
version = "1.0"
readme = "README.md"

[project.urls]
Task = "https://ufdatastudio.com/cis6930sp25/assignments/1"
repository = "https://github.com/alecmcgregor/cis6930sp25-assignment1"

[tool.pytest.ini_options]
testpaths = ["tests"]
